kiali-4224/peer-authentication-template.yaml
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: enable-strict-mtls
spec:
  mtls:
    mode: STRICT
