kiali-4224/destination-rule-template.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: reviews-v0
spec:
  host: reviews
  trafficPolicy:
    connectionPool:
      http:
        http1MaxPendingRequests: 1024
        maxRequestsPerConnection: 1024
      tcp:
        maxConnections: 1024
    loadBalancer:
      simple: ROUND_ROBIN
    outlierDetection:
      baseEjectionTime: 30s
      consecutiveGatewayErrors: 5
      interval: 10s
      maxEjectionPercent: 20
